切换到Fabric