@@ -1,23 +1,22 @@
 package net.pillowmc.pillow.asm;
 
+import cpw.mods.jarhandling.JarMetadata;
 import cpw.mods.jarhandling.SecureJar;
+import cpw.mods.jarhandling.impl.SimpleJarMetadata;
 import cpw.mods.modlauncher.api.*;
-import cpw.mods.niofs.union.UnionPath;
+import cpw.mods.modlauncher.api.IModuleLayerManager.Layer;
 import net.fabricmc.api.EnvType;
-import net.fabricmc.loader.launch.common.FabricLauncherBase;
-import net.fabricmc.loader.launch.common.FabricMixinBootstrap;
+import net.fabricmc.loader.impl.FabricLoaderImpl;
+import net.fabricmc.loader.impl.game.GameProvider;
+import net.fabricmc.loader.impl.launch.FabricLauncherBase;
+import net.fabricmc.loader.impl.util.SystemProperties;
+import net.fabricmc.loader.impl.util.log.Log;
+import net.fabricmc.loader.impl.util.log.LogCategory;
 import net.pillowmc.pillow.PillowGameProvider;
 import net.pillowmc.pillow.Utils;
+
+import org.apache.commons.io.file.spi.FileSystemProviders;
 import org.jetbrains.annotations.NotNull;
-import org.quiltmc.loader.impl.FormattedException;
-import org.quiltmc.loader.impl.QuiltLoaderImpl;
-import org.quiltmc.loader.impl.entrypoint.EntrypointUtils;
-import org.quiltmc.loader.impl.filesystem.QuiltJoinedFileSystemProvider;
-import org.quiltmc.loader.impl.filesystem.QuiltMemoryFileSystemProvider;
-import org.quiltmc.loader.impl.game.GameProvider;
-import org.quiltmc.loader.impl.util.SystemProperties;
-import org.quiltmc.loader.impl.util.log.Log;
-import org.quiltmc.loader.impl.util.log.LogCategory;
 import sun.misc.Unsafe;
 
 import java.io.File;
@@ -25,31 +24,36 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Type;
-import java.net.URISyntaxException;
+import java.lang.reflect.Method;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.spi.FileSystemProvider;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.function.BiPredicate;
 import java.util.jar.Manifest;
 import java.util.stream.Collectors;
 
 public class PillowTransformationService extends FabricLauncherBase implements ITransformationService {
+    private static final FileSystemProvider UFSP=FileSystemProviders.installed().getFileSystemProvider("union");
+    private static final Class<?> UFSPClass=UFSP.getClass();
+    private static final Method UFSPCreate;
     private static Unsafe unsafe;
+    private static long offset;
     private final Path remapCP = Files.createTempFile("pillowremapping", ".cp");
-    private static Field module;
     static {
+        try {
+            UFSPCreate=UFSPClass.getMethod("newFileSystem", BiPredicate.class, Path[].class);
+        } catch (NoSuchMethodException|SecurityException e) {
+            throw new RuntimeException(e);
+        }
         Field theUnsafe;
         try {
             theUnsafe = Unsafe.class.getDeclaredField("theUnsafe");
             theUnsafe.setAccessible(true);
             unsafe = (Unsafe) theUnsafe.get(null);
-            module = Class.class.getDeclaredField("module");
+            Field module = Class.class.getDeclaredField("module");
+            offset=unsafe.objectFieldOffset(module);
         } catch (NoSuchFieldException | IllegalAccessException e) {
             e.printStackTrace();
         }
@@ -65,12 +69,54 @@ public class PillowTransformationService extends FabricLauncherBase implements I
 
     @Override
     public void initialize(IEnvironment environment) {
-        System.setProperty(SystemProperties.MODS_DIRECTORY, "quiltmods");
+        setupUncaughtExceptionHandler();
         System.setProperty(SystemProperties.REMAP_CLASSPATH_FILE, remapCP.toString());
         provider = new PillowGameProvider();
         provider.locateGame(this, new String[0]);
-        Log.info(LogCategory.GAME_PROVIDER, "Loading %s %s with Quilt Loader %s", provider.getGameName(), provider.getRawGameVersion(), QuiltLoaderImpl.VERSION);
+        Log.info(LogCategory.GAME_PROVIDER, "Loading %s %s with Fabric Loader %s", provider.getGameName(), provider.getRawGameVersion(), FabricLoaderImpl.VERSION);
         provider.initialize(this);
+
+        try {
+            Files.writeString(this.remapCP, cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        FabricLoaderImpl loader = FabricLoaderImpl.INSTANCE;
+        loader.setGameProvider(provider);
+        loader.load();
+        loader.freeze();
+        FabricLoaderImpl.INSTANCE.loadAccessWideners();
+    }
+
+    // @Override
+    // public List<Resource> beginScanning(IEnvironment environment) {
+    //     Log.info(LogCategory.DISCOVERY, "Beginning scanning");
+
+    //     try {
+    //         return List.of(new Resource(IModuleLayerManager.Layer.GAME,
+    //                     List.of(SecureJar.from(Path.of(FabricLauncherBase.class.getProtectionDomain().getCodeSource().getLocation().toURI())))
+    //                 ));
+    //     } catch (URISyntaxException e) {
+    //         throw new RuntimeException(e);
+    //     }
+    // }
+    @Override
+    public List<Resource> completeScan(IModuleLayerManager layerManager) {
+        Log.info(LogCategory.DISCOVERY, "Completing scan with classpath [%s]", cp);
+        List<Path> paths=cp.stream()
+            .filter((path)->!path.getClass().getName().contains("Union"))
+            .collect(Collectors.toUnmodifiableList());
+        return List.of(new Resource(Layer.GAME,
+            List.of(SecureJar.from(PillowTransformationService::createJM, mergePaths(paths)))));
+    }
+
+    private static Path mergePaths(List<Path> paths){
+        unsafe.putObject(PillowTransformationService.class, offset, UFSPClass.getModule());
+        try {
+            return ((FileSystem)UFSPCreate.invoke(UFSP, (BiPredicate<String, String>)(a, b)->true, paths.toArray(new Path[0]))).getRootDirectories().iterator().next();
+        } catch (IllegalAccessException|IllegalArgumentException|InvocationTargetException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
@@ -80,38 +126,18 @@ public class PillowTransformationService extends FabricLauncherBase implements I
 
     @Override
     public @NotNull List<ITransformer> transformers() {
-        return Collections.emptyList();
+        return List.of(new EntryPointTransformer(), new AWTransformer());
     }
 
-    @Override
-    public List<Resource> beginScanning(IEnvironment environment) {
-        try {
-            long offset = unsafe.objectFieldOffset(module);
-            unsafe.putObject(PillowTransformationService.class, offset, FileSystemProvider.class.getModule());
-            Field field=FileSystemProvider.class.getDeclaredField("installedProviders");
-            field.setAccessible(true);
-            List<FileSystemProvider> providers= (List<FileSystemProvider>) field.get(null), newProviders;
-            newProviders=providers.stream().filter((provider_)->!(provider_.getClass().getName().contains("Quilt")))
-                    .collect(Collectors.toList());
-            newProviders.add(new QuiltMemoryFileSystemProvider());
-            newProviders.add(new QuiltJoinedFileSystemProvider());
-            field.set(null, newProviders);
-            return Collections.singletonList(new Resource(IModuleLayerManager.Layer.GAME,
-                    Collections.singletonList(
-                            SecureJar.from(getUFSPath(Paths.get(QuiltLoaderImpl.class.getProtectionDomain().getCodeSource().getLocation().toURI())))
-                        )
-                    ));
-        } catch (URISyntaxException | NoSuchFieldException | IllegalAccessException e) {
-            throw new RuntimeException(e);
-        }
+    private static JarMetadata createJM(SecureJar sj){
+        return new SimpleJarMetadata("fabricmod", "1.0.0", sj.getPackages(), sj.getProviders());
     }
 
-    private Path getUFSPath(Path path) {
+    private static Path getUFSPath(Path path) {
         if(path.getClass().getName().contains("Union")){
             FileSystem fs=path.getFileSystem();
             Class<?> fsc = fs.getClass();
             try {
-                long offset = unsafe.objectFieldOffset(module);
                 unsafe.putObject(PillowTransformationService.class, offset, fsc.getModule());
                 return (Path) fsc.getMethod("getPrimaryPath").invoke(fs);
             } catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
@@ -121,31 +147,19 @@ public class PillowTransformationService extends FabricLauncherBase implements I
         return path;
     }
 
-    @Override
-    public List<Resource> completeScan(IModuleLayerManager layerManager) {
-        try {
-            Files.writeString(this.remapCP, cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+    private static Path getZipPath(Path path) {
+        if(path.getClass().getName().contains("Zip")){
+            unsafe.putObject(PillowTransformationService.class, offset, path.getClass().getModule());
+            Class<?> fsc=path.getFileSystem().getClass();
+            try {
+                Field field=fsc.getDeclaredField("zfpath");
+                field.setAccessible(true);
+                return (Path) field.get(path.getFileSystem());
+            } catch (NoSuchFieldException | IllegalAccessException e) {
+                throw new RuntimeException(e);
+            }
         }
-        QuiltLoaderImpl loader = QuiltLoaderImpl.INSTANCE;
-        loader.setGameProvider(provider);
-        loader.load();
-        loader.freeze();
-        QuiltLoaderImpl.INSTANCE.loadAccessWideners();
-        FabricMixinBootstrap.init(getEnvironmentType(), loader);
-        finishMixinBootstrapping();
-        provider.unlockClassPath(this);
-        try {
-            EntrypointUtils.invoke("pre_launch", org.quiltmc.loader.api.entrypoint.PreLaunchEntrypoint.class, org.quiltmc.loader.api.entrypoint.PreLaunchEntrypoint::onPreLaunch);
-            EntrypointUtils.invoke("preLaunch", net.fabricmc.loader.api.entrypoint.PreLaunchEntrypoint.class, net.fabricmc.loader.api.entrypoint.PreLaunchEntrypoint::onPreLaunch);
-        } catch (RuntimeException e) {
-            throw new FormattedException("A mod crashed on startup!", e);
-        }
-        return Collections.singletonList(new Resource(IModuleLayerManager.Layer.GAME, cp.stream()
-                .map(SecureJar::from)
-                .collect(Collectors.toList())
-        ));
+        return path;
     }
 
     private GameProvider provider;
@@ -155,11 +169,24 @@ public class PillowTransformationService extends FabricLauncherBase implements I
 
     @Override
     public void addToClassPath(Path path, String... allowedPrefixes) {
+        // try {
+        //     unsafe.putObject(PillowTransformationService.class, offset, ClassLoader.getSystemClassLoader().getClass().getModule());
+        //     Field f=ClassLoader.getSystemClassLoader().getClass().getSuperclass().getDeclaredField("ucp");
+        //     Object ucp=unsafe.getObject(ClassLoader.getSystemClassLoader(), unsafe.objectFieldOffset(f));
+        //     ucp.getClass().getMethod("addURL", URL.class).invoke(ucp, path.toUri().toURL());
+        // } catch (NoSuchFieldException | NoSuchMethodException | MalformedURLException | IllegalAccessException | InvocationTargetException e) {
+        //     throw new RuntimeException(e);
+        // }
         cp.add(path);
     }
 
     @Override
     public void setAllowedPrefixes(Path path, String... prefixes) {}
+
+    @Override
+    public void setValidParentClassPath(Collection<Path> paths) {
+        // no op
+    }
 
     @Override
     public EnvType getEnvironmentType() {
@@ -208,7 +235,7 @@ public class PillowTransformationService extends FabricLauncherBase implements I
 
     @Override
     public String getTargetNamespace() {
-        return "searge";
+        return "named";
     }
 
     @Override
